[package]
name = "streamsplash"
version = "0.1.0"
authors = ["Jakub HlusiÄka <limeth@protonmail.com>"]

[dependencies]
vulkano = { git = "https://github.com/tomaka/vulkano" }
vulkano-shader-derive = { git = "https://github.com/tomaka/vulkano" }
vulkano-win = { git = "https://github.com/tomaka/vulkano" }
cgmath = "0.14.1"
image = "0.14.0"
winit = "0.6.4"
time = "0.1.37"
portaudio = "0.7.0"
