[package]
name = "streamsplash"
version = "0.1.0"
authors = ["Jakub Hlusička <limeth@protonmail.com>"]

[dependencies]
vulkano = { git = "https://github.com/tomaka/vulkano" }
vulkano-shader-derive = { git = "https://github.com/tomaka/vulkano" }
vulkano-win = { git = "https://github.com/tomaka/vulkano" }
cgmath = "0.14.1"
image = "0.14.0"
winit = "0.6.4"
time = "0.1.37"
cubeb = { git = "https://github.com/djg/cubeb-rs", branch = "workspace-reorg" }
rustfft = "2.0.0"
clap = "2.25.1"
seqlock = "0.1.1"
